--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
-<header>BREAKFLIX</header>
+<html lang="pt-BR">
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <title>Breakflix</title>
+</head>
 
+<body>
+    <header>BREAKFLIX</header>
 
-CAÇADORA DE GIGANTES-FILME 2020 (COMPLETO E DUBLADO)
-#CAÇADORA-DE-GIGANTES
+    <section>
+        <div>
+            <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
+            <p>#homem-aranha</p>
+        </div>
 
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 
-
-
-
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/h-7KkJq38lg?si=5SCmsp6KMSmyAmnJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
+
+</html>
